# evolution-suite

./: .gitignore  README.md  TESTING_REPORT.md  evolution.yaml  pyproject.toml
docs/: playwright-parallel-agents.md
docs/plans/: 2026-01-18-agent-network-graph-usage-dashboard-design.md  2026-01-18-evolution-suite-design.md
evolution/: EVOLUTION_LOG.md  EVOLUTION_STATE.md
evolution_suite/: __init__.py  cli.py  server.py
evolution_suite/api/: __init__.py  routes.py  schemas.py
evolution_suite/browser/: __init__.py  routes.py  service.py
evolution_suite/comms/: __init__.py  file_channel.py  websocket.py
evolution_suite/core/: __init__.py  agent.py  agent_manager.py  config.py  orchestrator.py
evolution_suite/mcp/: __init__.py  agent_tools.py  server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentCard.tsx  AgentNetworkGraph.tsx  AgentPool.tsx  BulkActionsToolbar.tsx  CodeBlock.tsx  CycleHistory.tsx  ErrorBoundary.tsx  GuidancePanel.tsx  Layout.tsx  MasterDirective.tsx  OutputPanel.tsx  SlideOutPanel.tsx  StatusBar.tsx  UsageDashboard.tsx
frontend/src/hooks/: useAgents.ts  usePersistedState.ts  useWebSocket.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/stores/: agentStore.ts
templates/prompts/: coordinator.md  evaluator.md  worker.md
